Modify test configuration.